apps/site/overlays/prod/node-placement-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpwowru
