apps/site/overlays/prod/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: site
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
